# C-language

./: CMakeLists.txt  LICENSE  README.md
titled1/: CMakeLists.txt  FindMax.c  ass2-2.c  char1.c  double.c  quicksort.c  rate.c  reserve.c
titled2/: CMakeLists.txt  double1.c  for循环.c  prime.c  single.c  test.c  test2.c  test4.c  凑十元.c  平均数.c  找零计算机.c  数位.c  整数逆序.c  比大小.c  猜数字.c  算时差.c  问候语.c  阶乘计算.c
