add_executable(1 single.c)
add_executable(2 double1.c)

add_executable(4 main.c)
add_executable(5 prime.c)
add_executable(6 test.c)
add_executable(7 test2.c)
add_executable(8 test4.c)
add_executable(9 凑十元.c)
add_executable(10 平均数.c)
add_executable(11 找零计算机.c)
add_executable(12 数位.c)
add_executable(13 整数逆序.c)
add_executable(14 比大小.c)
add_executable(15 猜数字.c)
add_executable(16 算时差.c)
add_executable(17 问候语.c)
add_executable(18 阶乘计算.c)